--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,11 @@
 spring.application.name=TafDataStoreService
 
-spring.datasource.url=jdbc:mysql://localhost:3306/flightdb?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
+//spring.datasource.url=jdbc:mysql://localhost:3306/flightdb?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
+//spring.datasource.username=root
+//spring.datasource.password=root_Pwd!
+//spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.datasource.url=jdbc:mysql://localhost:3306/flightdemodb?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root_Pwd!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
