Added docker and buildspec.yaml files and RDS database url in properties file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 spring.application.name=TafDataStoreService
 
-//spring.datasource.url=jdbc:mysql://localhost:3306/flightdb?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
-//spring.datasource.username=root
-//spring.datasource.password=root_Pwd!
-//spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-spring.datasource.url=jdbc:mysql://localhost:3306/flightdemodb?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=root_Pwd!
+spring.datasource.url=jdbc:mysql://mydbinstance-1.c5ss4uaued6p.us-east-1.rds.amazonaws.com:3306/flightdb?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
+spring.datasource.username=admin
+spring.datasource.password=Admin_123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/flightdb?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=root_Pwd!
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
